fix top alignment of hamburger input

--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -28,6 +28,7 @@ nav.main-nav {
     display: block;
     position: absolute;
     left: 4.5px;
+    top: $column-gap;
     width: 45px;
     height: 45px;
 
